--- a/WebAirport/Views/Shared/_Layout.cshtml
+++ b/WebAirport/Views/Shared/_Layout.cshtml
@@ -26,13 +26,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">WebAirport</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Аэропорт</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Airplane" asp-action="Index">Самолеты</a></li>
                     <li><a asp-area="" asp-controller="TypeAirplane" asp-action="Index">Типы самолетов</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Staff" asp-action="Index">Сотрудники</a></li>
+                    <li><a asp-area="" asp-controller="Position" asp-action="Index">Должности</a></li>
+                    <li><a asp-area="" asp-controller="Flight" asp-action="Index">Рейсы</a></li>
+                    <li><a asp-area="" asp-controller="Ticket" asp-action="Index">Билеты</a></li>
                 </ul>
             </div>
         </div>
