--- a/WebAirport/Views/Staff/Edit.cshtml
+++ b/WebAirport/Views/Staff/Edit.cshtml
@@ -13,7 +13,7 @@
     @Html.ValidationSummary(true)
     <div class="col-md-6">
         <form method="post">
-            <table class="table">
+            <table class="table table-bordered">
                 @Html.HiddenFor(model => model.Id)
                 <tr>
                     <th>Фамилия Имя Отчество</th>
