--- a/WebAirport/Views/Staff/Index.cshtml
+++ b/WebAirport/Views/Staff/Index.cshtml
@@ -18,10 +18,10 @@
     </div>
     <div class="col-md-6">
         <form>
-            <label>ФИО пассажира</label>
+            <label>ФИО сотрудника</label>
             <input type="text" name="FIOStaff" value="@ViewBag.FIOStaff" />
-            <label>Адрес</label>
-            <input type="text" name="Address" value="@ViewBag.Address" />
+            <label>Должность</label>
+            <input type="text" name="Position" value="@ViewBag.Position" />
             <input type="submit" value="Фильтровать" />
         </form>
     </div>
