--- a/WebAirport/Views/Airplane/Create.cshtml
+++ b/WebAirport/Views/Airplane/Create.cshtml
@@ -14,7 +14,7 @@
     @Html.ValidationSummary(true)
     <div class="col-md-8">
         <form method="post">
-            <table class="table">
+            <table class="table table-bordered">
                 <tr>
                     <th>Модель самолета</th>
                     <td>
