--- a/WebAirport/Views/Position/Create.cshtml
+++ b/WebAirport/Views/Position/Create.cshtml
@@ -14,7 +14,7 @@
     <div class="col-md-8">
         @Html.ValidationSummary(true)
         <form method="post">
-            <table class="table">
+            <table class="table table-bordered">
                 <tr>
                     <th>
                         Название должности
