--- a/WebAirport/Views/Staff/Create.cshtml
+++ b/WebAirport/Views/Staff/Create.cshtml
@@ -13,7 +13,7 @@
     @Html.ValidationSummary(true)
     <div class="col-md-8">
         <form method="post">
-            <table class="table">
+            <table class="table table-bordered">
                 <tr>
                     <th>Фамилия Имя Отчество</th>
                     <td>
