--- a/WebAirport/Views/Ticket/Edit.cshtml
+++ b/WebAirport/Views/Ticket/Edit.cshtml
@@ -15,7 +15,7 @@
     <div class="col-md-6">
         <form method="post">
             @Html.HiddenFor(model => model.Id)
-            <table class="table">
+            <table class="table table-bordered">
                 <tr>
                     <th>Фамилия Имя Отчество</th>
                     <td>
