--- a/WebAirport/Views/TypeAirplane/Create.cshtml
+++ b/WebAirport/Views/TypeAirplane/Create.cshtml
@@ -12,7 +12,7 @@
     @Html.ValidationSummary(true)
     <div class="col-md-8">
         <form method="post">
-            <table class="table">
+            <table class="table table-bordered">
                 <tr>
                     <th>Название типа</th>
                     <td>
