--- a/WebAirport/Views/TypeAirplane/Create.cshtml
+++ b/WebAirport/Views/TypeAirplane/Create.cshtml
@@ -28,7 +28,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <th>Лимиты</th>
+                    <th>Ограничения</th>
                     <td>
                         @Html.EditorFor(model => model.Limitation)
                         @Html.ValidationMessageFor(model => model.Limitation)
