--- a/WebAirport/Views/Ticket/Index.cshtml
+++ b/WebAirport/Views/Ticket/Index.cshtml
@@ -15,6 +15,7 @@
 <div class="row">
     <div class="col-md-6">
         @Html.ActionLink("Добавить билет", "Create")
+        @Html.ActionLink("Список билетов", "Index")
     </div>
     <div class="col-md-6">
         <form>
